--- a/app/output.css
+++ b/app/output.css
@@ -457,6 +457,28 @@ video {
   --radius: 0.5rem;
 }
 
+.dark {
+  --background: 222.2 84% 4.9%;
+  --foreground: 210 40% 98%;
+  --card: 222.2 84% 4.9%;
+  --card-foreground: 210 40% 98%;
+  --popover: 222.2 84% 4.9%;
+  --popover-foreground: 210 40% 98%;
+  --primary: 210 40% 98%;
+  --primary-foreground: 222.2 47.4% 11.2%;
+  --secondary: 217.2 32.6% 17.5%;
+  --secondary-foreground: 210 40% 98%;
+  --muted: 217.2 32.6% 17.5%;
+  --muted-foreground: 215 20.2% 65.1%;
+  --accent: 217.2 32.6% 17.5%;
+  --accent-foreground: 210 40% 98%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 210 40% 98%;
+  --border: 217.2 32.6% 17.5%;
+  --input: 217.2 32.6% 17.5%;
+  --ring: 212.7 26.8% 83.9%;
+}
+
 * {
   border-color: hsl(var(--border));
 }
@@ -616,10 +638,6 @@ body {
   inset: 0px;
 }
 
-.-top-7 {
-  top: -1.75rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -672,6 +690,14 @@ body {
   z-index: 50;
 }
 
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -680,6 +706,11 @@ body {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-auto {
@@ -707,14 +738,6 @@ body {
   margin-bottom: auto;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-28 {
-  margin-left: 7rem;
-}
-
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -729,6 +752,10 @@ body {
 
 .mr-auto {
   margin-right: auto;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-2 {
@@ -811,20 +838,12 @@ body {
   height: 1.5rem;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
 .h-64 {
   height: 16rem;
 }
 
 .h-8 {
   height: 2rem;
-}
-
-.h-96 {
-  height: 24rem;
 }
 
 .h-\[1rem\] {
@@ -858,6 +877,10 @@ body {
 
 .min-h-\[320px\] {
   min-height: 320px;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-0 {
@@ -894,6 +917,10 @@ body {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .w-6 {
@@ -1048,10 +1075,6 @@ body {
   place-items: center;
 }
 
-.content-center {
-  align-content: center;
-}
-
 .items-start {
   align-items: flex-start;
 }
@@ -1062,6 +1085,10 @@ body {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1080,8 +1107,16 @@ body {
   justify-content: space-around;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-14 {
   gap: 3.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
 }
 
 .gap-2 {
@@ -1130,10 +1165,6 @@ body {
   align-self: flex-end;
 }
 
-.self-center {
-  align-self: center;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1156,10 +1187,6 @@ body {
 
 .rounded-2xl {
   border-radius: 1rem;
-}
-
-.rounded-\[1\.6875rem\] {
-  border-radius: 1.6875rem;
 }
 
 .rounded-full {
@@ -1244,11 +1271,6 @@ body {
   border-style: dashed;
 }
 
-.border-\[\#BBB\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(187 187 187 / var(--tw-border-opacity));
-}
-
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
@@ -1264,13 +1286,24 @@ body {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
-.border-input {
-  border-color: hsl(var(--input));
+.border-highlight {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 155 145 / var(--tw-border-opacity));
 }
 
 .border-primary {
   --tw-border-opacity: 1;
-  border-color: rgb(93 95 239 / var(--tw-border-opacity));
+  border-color: rgb(255 156 100 / var(--tw-border-opacity));
+}
+
+.border-surface-dark {
+  --tw-border-opacity: 1;
+  border-color: rgb(218 218 218 / var(--tw-border-opacity));
+}
+
+.border-surface-light {
+  --tw-border-opacity: 1;
+  border-color: rgb(234 234 234 / var(--tw-border-opacity));
 }
 
 .border-transparent {
@@ -1284,7 +1317,7 @@ body {
 
 .border-t-primary {
   --tw-border-opacity: 1;
-  border-top-color: rgb(93 95 239 / var(--tw-border-opacity));
+  border-top-color: rgb(255 156 100 / var(--tw-border-opacity));
 }
 
 .bg-background {
@@ -1304,23 +1337,28 @@ body {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
 .bg-gray-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
 .bg-primary {
   --tw-bg-opacity: 1;
-  background-color: rgb(93 95 239 / var(--tw-bg-opacity));
+  background-color: rgb(255 156 100 / var(--tw-bg-opacity));
 }
 
 .bg-primary\/10 {
-  background-color: rgb(93 95 239 / 0.1);
+  background-color: rgb(255 156 100 / 0.1);
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-red-500 {
@@ -1328,9 +1366,19 @@ body {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-secondary {
+.bg-secondary-dark {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 254 255 / var(--tw-bg-opacity));
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 44 44 / var(--tw-bg-opacity));
+}
+
+.bg-surface-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 234 234 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
@@ -1452,10 +1500,6 @@ body {
   padding-top: 0.125rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1512,8 +1556,9 @@ body {
   line-height: 1.75rem;
 }
 
-.font-\[500\] {
-  font-weight: 500;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -1544,10 +1589,6 @@ body {
   text-transform: lowercase;
 }
 
-.leading-5 {
-  line-height: 1.25rem;
-}
-
 .leading-\[1\.375rem\] {
   line-height: 1.375rem;
 }
@@ -1564,12 +1605,7 @@ body {
   letter-spacing: -0.025em;
 }
 
-.text-\[\#9D9D9D\] {
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-.text-surface-light {
+.text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
@@ -1602,14 +1638,14 @@ body {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-highlight {
+  --tw-text-opacity: 1;
+  color: rgb(255 155 145 / var(--tw-text-opacity));
 }
 
 .text-indigo-600 {
@@ -1628,7 +1664,7 @@ body {
 
 .text-primary {
   --tw-text-opacity: 1;
-  color: rgb(93 95 239 / var(--tw-text-opacity));
+  color: rgb(255 156 100 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
@@ -1636,9 +1672,19 @@ body {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-secondary {
+.text-secondary-dark {
   --tw-text-opacity: 1;
-  color: rgb(255 254 255 / var(--tw-text-opacity));
+  color: rgb(33 33 33 / var(--tw-text-opacity));
+}
+
+.text-surface-dark {
+  --tw-text-opacity: 1;
+  color: rgb(218 218 218 / var(--tw-text-opacity));
+}
+
+.text-surface-light {
+  --tw-text-opacity: 1;
+  color: rgb(234 234 234 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1754,55 +1800,8 @@ body {
   color: hsl(var(--muted-foreground));
 }
 
-.before\:pointer-events-none::before {
-  content: var(--tw-content);
-  pointer-events: none;
-}
-
-.before\:absolute::before {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:left-0::before {
-  content: var(--tw-content);
-  left: 0px;
-}
-
-.before\:top-0::before {
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.before\:h-full::before {
-  content: var(--tw-content);
-  height: 100%;
-}
-
-.before\:w-full::before {
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.before\:bg-gradient-to-t::before {
-  content: var(--tw-content);
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.before\:from-white::before {
-  content: var(--tw-content);
-  --tw-gradient-from: #fff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-700:hover {
@@ -1967,14 +1966,13 @@ body {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
-
-  .xxs\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
 }
 
 @media (min-width: 350px) {
+  .xs\:h-12 {
+    height: 3rem;
+  }
+
   .xs\:flex-row {
     flex-direction: row;
   }
@@ -2021,4 +2019,32 @@ body {
   .md\:w-full {
     width: 100%;
   }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+.\[\&\:\:-webkit-progress-bar\]\:rounded-xl::-webkit-progress-bar {
+  border-radius: 0.75rem;
+}
+
+.\[\&\:\:-webkit-progress-bar\]\:bg-secondary-dark::-webkit-progress-bar {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
+}
+
+.\[\&\:\:-webkit-progress-bar\]\:bg-secondary-light::-webkit-progress-bar {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 44 44 / var(--tw-bg-opacity));
+}
+
+.\[\&\:\:-webkit-progress-value\]\:rounded-xl::-webkit-progress-value {
+  border-radius: 0.75rem;
+}
+
+.\[\&\:\:-webkit-progress-value\]\:bg-primary::-webkit-progress-value {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 156 100 / var(--tw-bg-opacity));
 }
