--- a/app/output.css
+++ b/app/output.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -32,11 +32,9 @@
 4. Use the user's configured `sans` font-family by default.
 5. Use the user's configured `sans` font-feature-settings by default.
 6. Use the user's configured `sans` font-variation-settings by default.
-7. Disable tap highlights on iOS
 */
 
-html,
-:host {
+html {
   line-height: 1.5;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -46,14 +44,12 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
   font-variation-settings: normal;
   /* 6 */
-  -webkit-tap-highlight-color: transparent;
-  /* 7 */
 }
 
 /*
@@ -125,10 +121,8 @@ strong {
 }
 
 /*
-1. Use the user's configured `mono` font-family by default.
-2. Use the user's configured `mono` font-feature-settings by default.
-3. Use the user's configured `mono` font-variation-settings by default.
-4. Correct the odd `em` font sizing in all browsers.
+1. Use the user's configured `mono` font family by default.
+2. Correct the odd `em` font sizing in all browsers.
 */
 
 code,
@@ -137,12 +131,8 @@ samp,
 pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   /* 1 */
-  font-feature-settings: normal;
-  /* 2 */
-  font-variation-settings: normal;
-  /* 3 */
   font-size: 1em;
-  /* 4 */
+  /* 2 */
 }
 
 /*
@@ -445,6 +435,14 @@ video {
 }
 
 :root {
+  /* brand */
+  --primary: 22, 100%, 70%;
+  --secondary-light: 0, 0%, 17%;
+  --secondary-dark: 0, 0%, 13%;
+  --highlight: 5, 100%, 78%;
+  --surface-light: 0, 0%, 92%;
+  --surface-dark: 0, 0%, 85%;
+  /* shadcn */
   --background: 0 0% 100%;
   --foreground: 222.2 84% 4.9%;
   --card: 0 0% 100%;
@@ -490,12 +488,12 @@ video {
 }
 
 * {
-  border-color: hsl(var(--border));
+  border-color: hsl(var(--secondary-light));
 }
 
 body {
-  background-color: hsl(var(--background));
-  color: hsl(var(--foreground));
+  background-color: hsl(var(--secondary-dark));
+  color: hsl(var(--surface-dark));
 }
 
 *, ::before, ::after {
@@ -736,6 +734,10 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -953,6 +955,10 @@ body {
   width: 80px;
 }
 
+.w-auto {
+  width: auto;
+}
+
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -960,10 +966,6 @@ body {
 
 .w-full {
   width: 100%;
-}
-
-.min-w-64 {
-  min-width: 16rem;
 }
 
 .max-w-lg {
@@ -1343,11 +1345,11 @@ body {
 }
 
 .bg-background {
-  background-color: hsl(var(--background));
+  background-color: hsl(var(--secondary-dark));
 }
 
 .bg-background\/80 {
-  background-color: hsl(var(--background) / 0.8);
+  background-color: hsl(var(--secondary-dark) / 0.8);
 }
 
 .bg-card {
@@ -1508,6 +1510,10 @@ body {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-6 {
@@ -1687,11 +1693,6 @@ body {
   color: hsl(var(--muted-foreground));
 }
 
-.text-neutral-500 {
-  --tw-text-opacity: 1;
-  color: rgb(115 115 115 / var(--tw-text-opacity));
-}
-
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(255 156 100 / var(--tw-text-opacity));
@@ -1758,7 +1759,7 @@ body {
 }
 
 .ring-offset-background {
-  --tw-ring-offset-color: hsl(var(--background));
+  --tw-ring-offset-color: hsl(var(--secondary-dark));
 }
 
 .filter {
@@ -1803,6 +1804,16 @@ body {
 
 .duration-200 {
   animation-duration: 200ms;
+}
+
+.marker\:text-lg *::marker {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.marker\:text-lg::marker {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .file\:border-0::file-selector-button {
@@ -1976,6 +1987,20 @@ body {
   --tw-enter-translate-y: -48%;
 }
 
+:is(.dark .dark\:bg-gray-700) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:fill-black) {
+  fill: #000;
+}
+
+:is(.dark .dark\:text-gray-600) {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 @media (min-width: 260px) {
   .xxs\:flex-row {
     flex-direction: row;
@@ -2020,6 +2045,10 @@ body {
     flex-direction: row;
   }
 
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
   .sm\:justify-end {
     justify-content: flex-end;
   }
@@ -2037,6 +2066,10 @@ body {
   .sm\:text-left {
     text-align: left;
   }
+
+  .sm\:text-start {
+    text-align: start;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2048,20 +2081,6 @@ body {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
-}
-
-:is(:where(.dark) .dark\:bg-gray-700) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-:is(:where(.dark) .dark\:fill-black) {
-  fill: #000;
-}
-
-:is(:where(.dark) .dark\:text-gray-600) {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .\[\&\:\:-webkit-progress-bar\]\:rounded-xl::-webkit-progress-bar {
